# pf_project

./: .gitignore  CMakeLists.txt
corrupted_files/: ae.cut.txt  ae.noise.txt  ae.restored.txt
header/: acquisition.hpp  pattern.hpp
include/: acquisition.hpp  pattern.hpp  recall.hpp  training.hpp  weight_matrix.hpp
main/: main_acquisition.cpp  main_recall.cpp  main_training.cpp
patterns/: 2.txt  ae.txt  ef.txt  en.txt  gg.txt  in.txt  inc.txt  jh.txt  mc.txt  pd.txt  ph.txt  rf.txt  sh.txt  vr.txt  wh.txt
source/: acquisition.cpp  pattern.cpp
src/: acquisition.cpp  pattern.cpp  recall.cpp  training.cpp  weight_matrix.cpp
tests/: acquisition.test.cpp
tests/corrupted_files/: 1.cut.txt  1.noise.txt  2.cut.txt  2.noise.txt  3.cut.txt  3.noise.txt  4.cut.txt  4.noise.txt
tests/corrupted_patterns/incomplete_patterns/: 1.txt  2.txt  3.txt  4.txt
tests/corrupted_patterns/noisy_patterns/: 1.txt  2.txt  3.txt  4.txt
tests/patterns/: 1.txt  3.txt  4.txt
tests/src/: acquisition.test.cpp  pattern.test.cpp  recall.test.cpp  training.test.cpp  weight_matrix.test.cpp
tests/weight_matrix/: test.txt  test1.txt  test2.txt
